# brainclustering

./: .gitignore  CMakeLists.txt  LICENSE  README.md  complementary.py  install.sh  plot_paper.py  requirements.txt  search.py  test.py  train.py
cluster/: CMakeLists.txt  agglomerative.cpp  clustering_util.hpp  kmeans.cpp  kmeans1d.hpp  leveled_kmeans.cpp  nesting.cpp
map/: CMakeLists.txt  map.py  mapping.cpp
options/: base_options.py  search_options.py  test_options.py  train_options.py
scripts/: run_tests.sh
util/: data_loader.py  evaluation.py  hungarian.hpp  munkres.cpp  plot_handler.py  util.hpp  util.py
